<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="300dp"
    android:layout_margin="@dimen/small_margin"
    style="@style/CardView.Light">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageCloud"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="@dimen/small_margin"
            android:contentDescription="@string/image_cloud_firebase_storage"
            app:layout_constraintBottom_toTopOf="@+id/getImageCloud"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

        <Button
            android:id="@+id/getImageCloud"
            style="@style/DefaultCustomButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/preleva"
            app:layout_constraintBottom_toTopOf="@+id/deleteImageCloud"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageCloud" />

        <Button
            android:id="@+id/deleteImageCloud"
            style="@style/DefaultCustomButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/elimina"
            android:layout_margin="@dimen/small_margin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/getImageCloud" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>