<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="250dp"
    style="@style/CardView.Light">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/coverImageHistory"
            android:layout_width="125dp"
            android:layout_height="0dp"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/image_cover_history"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/idRichiesta"
            style="@style/TextAppearance.SpecificBookText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/specificISBN"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/coverImageHistory"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="idRichiesta" />

        <TextView
            android:id="@+id/specificISBN"
            style="@style/TextAppearance.SpecificBookText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/specificTitleBook"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/coverImageHistory"
            app:layout_constraintTop_toBottomOf="@+id/idRichiesta"
            tools:text="ISBN Book" />

        <TextView
            android:id="@+id/specificTitleBook"
            style="@style/TextAppearance.SpecificBookText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/bookDetails"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/coverImageHistory"
            app:layout_constraintTop_toBottomOf="@+id/specificISBN"
            tools:text="Title Book" />

        <Button
            android:id="@+id/bookDetails"
            style="@style/DefaultCustomButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dettagli"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/deleteBook"
            app:layout_constraintStart_toEndOf="@+id/coverImageHistory"
            app:layout_constraintTop_toBottomOf="@+id/specificTitleBook" />

        <Button
            android:id="@+id/deleteBook"
            style="@style/DefaultCustomButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/elimina"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/bookDetails"
            app:layout_constraintTop_toBottomOf="@+id/specificTitleBook" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>