<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

        <data>
                <import type="android.view.View" />
                <variable
                    name="viewModel"
                    type="com.simonetugnetti.coversuggestionsengine.cover.CoverViewModel" />
        </data>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".cover.CoverFragment">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/small_margin"
                    android:text="@string/title"
                    android:textAppearance="@style/TextAppearance.Title"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/infoISBN"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:ems="10"
                    android:hint="@{viewModel.hintSearchBook}"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    app:layout_constraintEnd_toStartOf="@+id/sendRequest"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/title" />

                <Button
                    android:id="@+id/sendRequest"
                    style="@style/DefaultCustomButton"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:enabled="@{viewModel.enableGetImage}"
                    android:text="@string/btn_cerca"
                    app:layout_constraintBottom_toBottomOf="@+id/infoISBN"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/infoISBN"
                    app:layout_constraintTop_toTopOf="@+id/infoISBN" />

                <ImageView
                    loadImage="@{viewModel.imageUtil}"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_margin="@dimen/default_margin"
                    android:contentDescription="@string/image_util"
                    android:visibility="@{viewModel.visibleImageUtil ? View.VISIBLE : View.GONE}"
                    app:layout_constraintBottom_toTopOf="@+id/barcode"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/infoISBN" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/listCover"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_margin="@dimen/default_margin"
                    android:visibility="@{viewModel.visibleImageUtil ? View.GONE : View.VISIBLE}"
                    app:layout_constraintBottom_toTopOf="@+id/barcode"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/infoISBN" />

                <ProgressBar
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_margin="@dimen/default_margin"
                    android:padding="80dp"
                    android:visibility="@{viewModel.progressVisible ? View.VISIBLE : View.GONE}"
                    android:indeterminateTint="@color/color_selector"
                    android:background="@color/white"
                    app:layout_constraintBottom_toTopOf="@+id/barcode"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/infoISBN"
                    />

                <Button
                    android:id="@+id/barcode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/default_margin"
                    android:text="@string/scannerizza_il_barcode"
                    style="@style/DefaultCustomButton"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>


</layout>